--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,6 +16,7 @@
 @import 'partials/colors';
 @import 'partials/style';
 @import 'partials/nav';
-@import 'partials/jquery.marquee';
+//@import 'partials/jquery.marquee';
 
 @import 'partials/media';
+@import 'partials/front';
