--- a/scss/vars/_color.scss
+++ b/scss/vars/_color.scss
@@ -1,17 +1,24 @@
 @charset "utf-8";
-/*yatsu color var*/
+/*color var*/
 
-$color_main: #f4ac00;
+$color_main:#F9F0DA; 
+$color_main_70: rgba(249,240,218,0.7);
 $color_second: #ffff9b;
 $color_third: #ffd23b;
+$color_fourth:#f4ac00;
 $color_third_66: rgba(255, 210, 59, 0.66);
 $color_light_black: #111111;
 $color_light_black_70: rgba(17, 17, 17, 0.7);
 $color_black: #000000;
 $color_light_grey: #c0c0c0;
+$color_light_grey2: #D8D8D8;
+
 $color_dark_grey: #535353;
+$color_dark_grey2: #4A4A4A;
 $color_light_brown: #68473e;
+$color_light_brown2: #605246;
 $color_brown: #392722;
 $color_white: #ffffff;
 $color_green: #00cc0a;
 $color_red: #dc0000;
+$color_blue: #007bff;
