--- a/scss/partials/_front.scss
+++ b/scss/partials/_front.scss
@@ -1,5 +1,10 @@
 @import '../vars/vars';
 @import "../vars/color";
+/*bann3r image*/
+.banner{
+    width: 100%; 
+    vertical-align: bottom;
+}
 /*latest module*/
 .color_dark_grey:hover{
     text-decoration: none;
