--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,7 +16,9 @@
 @import 'partials/colors';
 @import 'partials/style';
 @import 'partials/nav';
+@import 'partials/sidebar';
 //@import 'partials/jquery.marquee';
 
 @import 'partials/media';
 @import 'partials/front';
+@import 'partials/bootstrap-overried';
