--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -64,10 +64,11 @@ body {
   width: 100%;
   margin: 0;
 }
-#content {
+.content {
   height: 100%;
   flex: 1 0 auto;
-  @include width100-margin0();
+  margin: 0;
+  // @include width100-margin0();
 }
 #top-bar{
   height:83px;
