--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -52,7 +52,9 @@
   .bg_color_white {
     background-color: $color_white;
   }
-  
+  .bg_color_white_grey {
+    background-color: $color_white_grey;
+  }
   .bg_color_green {
     background-color: $color_green;
   }
@@ -122,7 +124,9 @@
   .color_white {
     color: $color_white;
   }
-  
+  .color_white_grey {
+    color: $color_white_grey;
+  }
   .color_green {
     color: $color_green;
   }
