--- a/scss/vars/_color.scss
+++ b/scss/vars/_color.scss
@@ -12,6 +12,7 @@ $color_light_black_70: rgba(17, 17, 17, 0.7);
 $color_black: #000000;
 $color_light_grey: #c0c0c0;
 $color_light_grey2: #D8D8D8;
+$color_light_grey3: #E8E8E8;
 
 $color_dark_grey: #535353;
 $color_dark_grey2: #4A4A4A;
@@ -19,6 +20,7 @@ $color_light_brown: #68473e;
 $color_light_brown2: #605246;
 $color_brown: #392722;
 $color_white: #ffffff;
+$color_white_grey: #f3f3f3;
 $color_green: #00cc0a;
 $color_red: #dc0000;
 $color_blue: #007bff;
