--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -33,7 +33,12 @@ aside[role="complementary"] {
   width: 300px / 960px * 100%;
 }
 */
-
+#toplink{
+  background-color: $color_light_brown2;
+  a{
+    color: #CCCCCC !important;
+  }
+}
 body {
   background   : url(images/bg.png),
   linear-gradient(to bottom, rgb(250, 249, 247),  rgb(250, 249, 247));
@@ -71,17 +76,17 @@ body {
   // @include width100-margin0();
 }
 #top-bar{
-  height:83px;
+  height:62px;
   flex-shrink: 0;
   @include width100-margin0();
 
   .logo{
-    margin-top: 10px;
+    margin-top: 0;
     width:100%;
-    height: 66px;
+    height: 56px;
     background   : url(images/logo.png);
     background-repeat  : no-repeat;
-    background-size: 100%;
+    // background-size: 100%;
   }
 }
 #bottom-bar {
@@ -91,6 +96,7 @@ body {
 
   font-family: PingFangTC-Regular;
   font-size: 14px;
+  background-color: $color_light_brown2;
   color: #CCCCCC;
   text-align: left;
   .info-contact{
