--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -2,14 +2,15 @@
 @import '../vars/color';
 /* $navbar _style.scss*/
 .navbar {
-  height: 44px;
+  // height: 36px;
+  // margin-top:16px;
   /*1st layer .ul_nav .li_nav*/
   ul {
     list-style: none;
 
     li {
       list-style: none;
-      padding: 0 10px;
+      // padding: 0 10px;
       display: inline-block;
       
       position: relative;
