--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -14,7 +14,7 @@
         font-family: 'Poppins', sans-serif;
         font-size: 1.1em;
         font-weight: 300;
-        line-height: 1.7em;
+        line-height: 1.8em;
         color: #505050;
         text-indent: 2em;
     }
@@ -149,6 +149,7 @@
     }
     #sidebar.active {
         margin-left: 0;
+        animation:none;
     }
     #sidebarCollapse span {
         display: none;
